Fixed an issue with the max height of the profile picture being slightly too small (producing a slight gap below it in some instances due to the height of the text to the right).

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -21,7 +21,7 @@ img {
 
 header {
     display: grid;
-    grid-template-columns: minmax(3em, 9em) minmax(6em, 100%);
+    grid-template-columns: minmax(3em, 9.5em) minmax(6em, 100%);
     grid-template-rows: auto;
     margin: auto;
     max-width: 72em;
